--- a/unicorn-oauth2/samples-default-authorizationserver/samples-default-authorizationserver.gradle
+++ b/unicorn-oauth2/samples-default-authorizationserver/samples-default-authorizationserver.gradle
@@ -3,6 +3,7 @@ import org.springframework.boot.gradle.plugin.SpringBootPlugin
 dependencies {
     implementation platform(SpringBootPlugin.BOM_COORDINATES)
     implementation libs.authorization.server
+    implementation(project(":virtual-thread"))
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-security"
