--- a/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
+++ b/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
@@ -6,7 +6,7 @@ ext {
 
 dependencies {
     implementation platform(SpringBootPlugin.BOM_COORDINATES)
-    implementation(project(":virtual-thread"))
+    implementation(project(":virtual-threads"))
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
     implementation "org.springframework.cloud:spring-cloud-starter-gateway:$gatewayVersion"
