--- a/settings.gradle
+++ b/settings.gradle
@@ -111,8 +111,10 @@ def buildFiles = fileTree(rootDir) {
     def excludes = gradle.startParameter.projectProperties.get("excludeProjects")?.split(",")
     include "**/*.gradle", "**/*.gradle.kts"
     exclude "build", "**/gradle", "settings.gradle", "buildSrc", "/build.gradle", ".*", "out"
-    if ("$kotlinVersion".matches("^1\\.[0-8]\\.\\d{1,2}\$|^0\\.\\d+\\.\\d+\$")) // current version is not support Java 20, 1.9.0 Support Java 20
-        exclude "**/*-kotlin.gradle"
+    if ("$kotlinVersion".matches("^1\\.[0-8]\\.\\d{1,2}\$|^0\\.\\d+\\.\\d+\$") // current version is not Support Java 20, 1.9.0 Support Java 20
+//            || "$kotlinVersion".matches("^1\\.9\\.[01]{1,2}\$") // 1.9.10 not Support Java 21
+    )
+        exclude "**/*-kotlin.gradle.kts"
     if (excludes) {
         exclude excludes
     }
