--- a/valentine-starter/valentine-starter.gradle
+++ b/valentine-starter/valentine-starter.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.springframework.boot' // 通过引入这个，使该subModule有了相关的Task
+    id 'io.spring.dependency-management'
     alias(libs.plugins.kotlin.jvm)
     alias(libs.plugins.kotlin.spring)
     alias(libs.plugins.kotlin.jpa)
@@ -11,9 +12,15 @@ plugins {
 dependencies {
     implementation project(':unicorn-security')
     implementation project(':unicorn-logging')
-    implementation project(':unicorn-tp-tools-kotlin')
-    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
+    implementation('org.springframework.boot:spring-boot-starter-web') {
+        exclude group: 'org.apache.tomcat.embed', module: 'tomcat-embed-core'
+        exclude group: 'org.apache.tomcat.embed', module: 'tomcat-embed-websocket'
+    }
+    String tomcatVersion = dependencyManagement.importedProperties['tomcat.version']
+    implementation "org.apache.tomcat.experimental:tomcat-embed-programmatic:$tomcatVersion"
+    implementation 'org.apache.httpcomponents.client5:httpclient5'
     if (kotlinEnable) {
+        implementation project(':unicorn-tp-tools-kotlin') // kotlin as well
         implementation "org.jetbrains.kotlin:kotlin-stdlib"
         implementation 'org.jetbrains.kotlin:kotlin-reflect'
         implementation libs.bundles.coroutines
