Revert "[mark for rollback] disable native"
This reverts commit 4fa673b8

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ plugins {
 
 ext {
     kotlinEnable = true
-    graalvmEnable = false
+    graalvmEnable = true
 }
 
 ext.sharedManifest = manifest {
