try fixed docker build issue

--- a/valentine-starter/valentine-starter.gradle
+++ b/valentine-starter/valentine-starter.gradle
@@ -58,7 +58,8 @@ tasks.named("bootRun") {
 tasks.named("bootBuildImage") {
     environment = [
             "BP_JVM_TYPE"                 : "JDK",
-            "BP_JVM_VERSION"              : "20",
+            "BP_JVM_VERSION"              : "20.*",
+            "BP_NATIVE_IMAGE"             : "true",
             "BPE_DELIM_JAVA_TOOL_OPTIONS" : " ",
             "BPE_APPEND_JAVA_TOOL_OPTIONS": "-XX:+UseZGC --enable-preview"
     ]
