https://github.com/oracle/graal/issues/7214 try to fixed oom

--- a/valentine-starter/valentine-starter.gradle
+++ b/valentine-starter/valentine-starter.gradle
@@ -68,6 +68,7 @@ tasks.named("bootBuildImage") {
             "gcr.io/paketo-buildpacks/graalvm",
             "gcr.io/paketo-buildpacks/java-native-image"
     ]
+    jvmArguments(["-Xmx7g"])
 }
 
 if (graalvmEnable) {
