--- a/valentine-starter/valentine-starter.gradle
+++ b/valentine-starter/valentine-starter.gradle
@@ -56,7 +56,6 @@ tasks.named("bootRun") {
 }
 
 tasks.named("bootBuildImage") {
-    // builder = "paketobuildpacks/builder:tiny"
     environment = [
             "BP_JVM_VERSION"                 : "20.*",
             "BP_NATIVE_IMAGE"                : "true",
@@ -68,7 +67,7 @@ tasks.named("bootBuildImage") {
             "gcr.io/paketo-buildpacks/graalvm",
             "gcr.io/paketo-buildpacks/java-native-image"
     ]
-    jvmArguments(["-Xmx7g"])
+    jvmArguments = ["-Xmx7g"]
 }
 
 if (graalvmEnable) {
