try fixed docker build issue: OOM

--- a/valentine-starter/valentine-starter.gradle
+++ b/valentine-starter/valentine-starter.gradle
@@ -67,7 +67,7 @@ tasks.named("bootBuildImage") {
             "gcr.io/paketo-buildpacks/graalvm",
             "gcr.io/paketo-buildpacks/java-native-image"
     ]
-    jvmArguments = ["-Xmx7g"]
+    jvmArgs += ["-Xmx7g"]
 }
 
 if (graalvmEnable) {
