--- a/valentine-starter/valentine-starter.gradle
+++ b/valentine-starter/valentine-starter.gradle
@@ -20,7 +20,7 @@ dependencies {
     implementation "org.apache.tomcat.experimental:tomcat-embed-programmatic:$tomcatVersion"
     implementation 'org.apache.httpcomponents.client5:httpclient5'
     if (kotlinEnable) {
-//        implementation project(':unicorn-tp-tools-kotlin') // kotlin as well
+        implementation project(':unicorn-tp-tools-kotlin') // kotlin as well
         implementation "org.jetbrains.kotlin:kotlin-stdlib"
         implementation 'org.jetbrains.kotlin:kotlin-reflect'
         implementation libs.bundles.coroutines
@@ -59,7 +59,7 @@ tasks.named("bootBuildImage") {
     environment = [
             "BP_JVM_VERSION"                 : "20.*",
             "BP_NATIVE_IMAGE"                : "true",
-            "BP_NATIVE_IMAGE_BUILD_ARGUMENTS": "--enable-preview -XX:+HeapDumpOnOutOfMemoryError -J-Xmx7g " + // fixed OOM with -J-Xmx7g
+            "BP_NATIVE_IMAGE_BUILD_ARGUMENTS": "--enable-preview -J-Xmx7g " + // fixed OOM with -J-Xmx7g
                     "--initialize-at-build-time=ch.qos.logback.classic.Logger,ch.qos.logback.core.status.StatusBase" +
                     ",org.slf4j.LoggerFactory,ch.qos.logback.core.CoreConstants,ch.qos.logback.core.util.StatusPrinter" +
                     ",ch.qos.logback.core.status.InfoStatus,ch.qos.logback.classic.Level,ch.qos.logback.core.util.Loader",
