--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,11 +29,11 @@ jobs:
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }} # location for the settings.xml file
       # https://github.com/oktadev/auth0-full-stack-java-example/blob/main/.github/workflows/publish.yml
-      - name: Set Swap Space
-        if: runner.os == 'Linux'
-        uses: pierotofy/set-swap-space@master
-        with:
-          swap-size-gb: 6
+      # - name: Set Swap Space
+      #   if: runner.os == 'Linux'
+      #   uses: pierotofy/set-swap-space@master
+      #   with:
+      #     swap-size-gb: 6
 
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
