--- a/valentine-starter/valentine-starter.gradle
+++ b/valentine-starter/valentine-starter.gradle
@@ -56,21 +56,31 @@ tasks.named("bootRun") {
 }
 
 tasks.named("bootBuildImage") {
-    environment = [
-            "BP_JVM_VERSION"                 : "20.*",
-            "BP_NATIVE_IMAGE"                : "true",
-            "BP_NATIVE_IMAGE_BUILD_ARGUMENTS": "--enable-preview -J-Xmx7g " + // fixed OOM with -J-Xmx7g
-                    "-H:DeadlockWatchdogInterval=10 -H:+DeadlockWatchdogExitOnTimeout " +
-                    "--initialize-at-build-time=ch.qos.logback.classic.Logger,ch.qos.logback.core.status.StatusBase" +
-                    ",org.slf4j.LoggerFactory,ch.qos.logback.core.CoreConstants,ch.qos.logback.core.util.StatusPrinter" +
-                    ",ch.qos.logback.core.status.InfoStatus,ch.qos.logback.classic.Level,ch.qos.logback.core.util.Loader ",
-            "BPE_DELIM_JAVA_TOOL_OPTIONS"    : " ",
-            "BPE_APPEND_JAVA_TOOL_OPTIONS"   : "-XX:+UseZGC -XX:+HeapDumpOnOutOfMemoryError --enable-preview"
-    ]
-    buildpacks = [
-            "gcr.io/paketo-buildpacks/graalvm",
-            "gcr.io/paketo-buildpacks/java-native-image"
-    ]
+    if (graalvmEnable) {
+        environment = [
+                "BP_JVM_VERSION"                 : "20.*",
+                "BP_NATIVE_IMAGE"                : "true",
+                "BP_NATIVE_IMAGE_BUILD_ARGUMENTS": "--enable-preview -J-Xmx7g " + // fixed OOM with -J-Xmx7g
+                        "-H:DeadlockWatchdogInterval=10 -H:+DeadlockWatchdogExitOnTimeout " +
+                        "--initialize-at-build-time=ch.qos.logback.classic.Logger,ch.qos.logback.core.status.StatusBase" +
+                        ",org.slf4j.LoggerFactory,ch.qos.logback.core.CoreConstants,ch.qos.logback.core.util.StatusPrinter" +
+                        ",ch.qos.logback.core.status.InfoStatus,ch.qos.logback.classic.Level,ch.qos.logback.core.util.Loader ",
+                "BPE_DELIM_JAVA_TOOL_OPTIONS"    : " ",
+                "BPE_APPEND_JAVA_TOOL_OPTIONS"   : "-XX:+UseZGC -XX:+HeapDumpOnOutOfMemoryError --enable-preview"
+        ]
+        buildpacks = [
+                "gcr.io/paketo-buildpacks/graalvm",
+                "gcr.io/paketo-buildpacks/java-native-image"
+        ]
+    } else {
+        environment = [
+                "BP_JVM_TYPE"                 : "JDK",
+                "BP_JVM_VERSION"              : "20",
+                "BPE_DELIM_JAVA_TOOL_OPTIONS" : " ",
+                "BPE_APPEND_JAVA_TOOL_OPTIONS": "-XX:+UseZGC --enable-preview"
+        ]
+    }
+
 }
 
 if (graalvmEnable) {
