--- a/unicorn-starter/pom.xml
+++ b/unicorn-starter/pom.xml
@@ -31,14 +31,14 @@
 
     <properties>
         <java.version>20</java.version>
-        <project.core.version>4.0.1-mu</project.core.version>
+        <project.core.version>4.1.0-omicron-20-RC1</project.core.version>
         <maven.compiler.release>20</maven.compiler.release>
         <lombok.version>1.18.28</lombok.version>
-        <mapstruct.version>1.5.4.Final</mapstruct.version>
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
         <javassist.version>3.29.2-GA</javassist.version>
         <shardingsphere.version>5.2.0</shardingsphere.version>
-        <kotlin.version>1.9.0</kotlin.version>
-        <kotlin-coroutines.version>1.7.2</kotlin-coroutines.version>
+        <kotlin.version>1.9.10</kotlin.version>
+        <kotlin-coroutines.version>1.7.3</kotlin-coroutines.version>
     </properties>
 
     <dependencies>
@@ -64,6 +64,11 @@
         <dependency>
             <groupId>com.lwohvye</groupId>
             <artifactId>unicorn-code-gen-kotlin</artifactId>
+            <version>${project.core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lwohvye</groupId>
+            <artifactId>virtual-threads</artifactId>
             <version>${project.core.version}</version>
         </dependency>
         <dependency>
