--- a/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
+++ b/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
@@ -1,14 +1,22 @@
-import org.springframework.boot.gradle.plugin.SpringBootPlugin
+plugins {
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
+}
 
 ext {
-    gatewayVersion = '4.1.0-M1'
+    set('springCloudVersion', "2023.0.0-M1")
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 dependencies {
-    implementation platform(SpringBootPlugin.BOM_COORDINATES)
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
-    implementation "org.springframework.cloud:spring-cloud-starter-gateway:$gatewayVersion"
+    implementation "org.springframework.cloud:spring-cloud-starter-gateway"
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation libs.springdoc.webflux.ui
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
