--- a/unicorn-oauth2/samples-gateway-client/src/main/resources/application.yml
+++ b/unicorn-oauth2/samples-gateway-client/src/main/resources/application.yml
@@ -75,7 +75,7 @@ spring:
             # 剥去一段，/res/some-resource变为/some-resource
             - StripPrefix=1
             # 添加prefix，从/some-resource变为/api/some-resource
-            - PrefixPath=/api
+            #- PrefixPath=/api
         - id: security-service
           uri:
             https://localhost:8081
@@ -100,6 +100,9 @@ springdoc:
       - name: security-service
         display-name: unicorn-security
         url: /v3/api-docs/security
+      - name: resource-service
+        display-name: unicorn-resource
+        url: /v3/api-docs/res
       - name: gateway
         display-name: remote-gateway
         url: /v3/api-docs
