--- a/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
+++ b/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
@@ -18,7 +18,9 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
     implementation "org.springframework.cloud:spring-cloud-starter-gateway"
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+    implementation 'org.springframework.session:spring-session-data-redis'
     implementation libs.springdoc.webflux.ui
+    implementation libs.redisson
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation "org.webjars:webjars-locator-core"
     implementation "org.webjars:bootstrap:5.2.3"
