--- a/unicorn-oauth2/samples-gateway-client/src/main/resources/application.yml
+++ b/unicorn-oauth2/samples-gateway-client/src/main/resources/application.yml
@@ -91,6 +91,13 @@ spring:
           filters:
             - RewritePath=/v3/api-docs/(?<path>.*), /$\{path}/v3/api-docs
 
+  session:
+    store-type: redis
+    timeout: 900s
+  redis:
+    redisson:
+      file: 'classpath:redisson.yaml'
+
 #springdoc:
 #  swagger-ui:
 #    use-root-path: true
