[Draft] update shardingsphere to 5.4.0 no much db-config changes

--- a/.github/workflows/graalvm_macos.yml
+++ b/.github/workflows/graalvm_macos.yml
@@ -25,7 +25,7 @@ jobs:
       #  https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Installing-custom-Java-package-type
       - name: Download JDK
         run: |
-          download_url="https://download.java.net/java/GA/jdk21/fd2272bbf8e04c3dbaee13770090416c/35/GPL/openjdk-21_macos-x64_bin.tar.gz"
+          download_url="https://download.oracle.com/graalvm/21/latest/graalvm-jdk-21_macos-x64_bin.tar.gz"
           wget -O $RUNNER_TEMP/java_package.tar.gz $download_url
       - uses: actions/setup-java@v3
         with:
