--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,5 @@
 #    limitations under the License.
 #
 springBootVersion=3.2.0-M2
-kotlinVersion=1.9.20-Beta
+kotlinVersion=1.9.20-Beta2
 kotlin.experimental.tryK2=true
