--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,6 @@
 #    limitations under the License.
 #
 springBootVersion=3.2.0-M3
+springCloudVersion=2023.0.0-M2
 kotlinVersion=1.9.20-Beta2
 kotlin.experimental.tryK2=true
