--- a/buildSrc/src/main/groovy/com.lwohvye.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/com.lwohvye.java-conventions.gradle
@@ -20,7 +20,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/lWoHvYe/eladmin")
+            url = uri("https://maven.pkg.github.com/lWoHvYe/unicorn")
             credentials {
                 // uses the Elvis operator (if-not-null-else shorthand) ?:.
                 // If the expression to the left of ?: is not null, the Elvis operator returns it;
