--- a/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
+++ b/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation "org.webjars:webjars-locator-core"
     implementation "org.webjars:bootstrap:5.2.3"
+    implementation "org.webjars:popper.js:2.9.3"
     implementation 'org.webjars:jquery:3.6.4'
 
 }
