--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,5 @@
 #
 springBootVersion=3.2.0-M3
 springCloudVersion=2023.0.0-M2
-kotlinVersion=1.9.20-Beta2
+kotlinVersion=1.9.20-RC
 kotlin.experimental.tryK2=true
