https://github.com/jwtk/jjwt/blob/master/README.md Java JWT:0.12.2

--- a/settings.gradle
+++ b/settings.gradle
@@ -37,7 +37,7 @@ dependencyResolutionManagement {
             version('easyCaptcha', '1.6.2')
             version('hutool', '5.8.20')
             version('ip2region', '3.0.4')
-            version('jjwt', '0.11.5')
+            version('jjwt', '0.12.2')
             version('kotlin', "$kotlinVersion")
             version('kotlinxCoroutines', '1.7.3')
             version('log4jdbc', '1.18')
@@ -73,9 +73,7 @@ dependencyResolutionManagement {
             library('easy-captcha', 'com.github.whvcse', 'easy-captcha').versionRef('easyCaptcha')
             library('hutool', 'cn.hutool', 'hutool-all').versionRef('hutool')
             library('ip2region', 'net.dreamlu', 'mica-ip2region').versionRef('ip2region')
-            library('jjwt-api', 'io.jsonwebtoken', 'jjwt-api').versionRef('jjwt')
-            library('jjwt-impl', 'io.jsonwebtoken', 'jjwt-impl').versionRef('jjwt')
-            library('jjwt-jackson', 'io.jsonwebtoken', 'jjwt-jackson').versionRef('jjwt')
+            library('jjwt', 'io.jsonwebtoken', 'jjwt').versionRef('jjwt')
             library('log4jdbc', 'com.lwohvye.log4jdbc-log4j2', 'log4jdbc-log4j2-jdbc4.1').versionRef('log4jdbc')
             library('logback-encoder', 'net.logstash.logback', 'logstash-logback-encoder').versionRef('logstash')
             library('mapstruct', 'org.mapstruct', 'mapstruct').versionRef('mapstruct')
