--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -13,6 +13,11 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
 
+      - name: Pre-build Project
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: classes
+
       - name: update gradle
         id: gradleUpdate
         uses: EdwarDDay/upgrade-gradle-action@v1
