--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -15,10 +15,14 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
 
-      - name: Pre-build Project
-        uses: gradle/gradle-build-action@v2
+      - name: Setup Java JDK
+        uses: actions/setup-java@v3
         with:
-          arguments: classes
+          java-version: '21'
+          distribution: 'temurin'
+          check-latest: true
+          server-id: github 
+          settings-path: ${{ github.workspace }} 
 
       - name: update gradle
         id: gradleUpdate
