--- a/unicorn-core/unicorn-core.gradle
+++ b/unicorn-core/unicorn-core.gradle
@@ -125,3 +125,6 @@ tasks.named('compileJava') {
     options.javaModuleVersion = provider { project.version }
 }
 
+javadoc {
+    options.addStringOption('-release', '17')
+}
