--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,5 @@
 #
 springBootVersion=3.2.0-RC1
 springCloudVersion=2023.0.0-M2
-kotlinVersion=1.9.20-RC2
+kotlinVersion=1.9.20
 kotlin.experimental.tryK2=true
