--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 #
-springBootVersion=3.2.0-RC2
+springBootVersion=3.2.0
 springCloudVersion=2023.0.0-RC1
 kotlinVersion=1.9.20
 kotlin.experimental.tryK2=true
