Update labeler configuration
The existing labeler.yml configuration has been updated for better handling of file changes. This includes improvements for both the documentation and foundational category specifications, and adding a new 'release' label for pull requests targeting the main branch.

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,7 +1,11 @@
-
 documentation:
-  - document/**/*.md
+  - changed-files:
+      - any-glob-to-any-file: 'document/**/*.md'
 
 foundational:
-  - unicorn-core/src/main/java/**/*
-  - unicorn-reactive/src/main/java/**/*
+  - changed-files:
+      - any-glob-to-any-file: [ 'unicorn-core/src/main/java/**/*', 'unicorn-beans/src/main/java/**/*' ]
+
+# Add 'release' label to any PR that is opened against the `main` branch
+release:
+  - base-branch: 'main'
