--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,6 @@
 #    limitations under the License.
 #
 springBootVersion=3.2.0
-springCloudVersion=2023.0.0-RC1
+springCloudVersion=2023.0.0
 kotlinVersion=1.9.20
 kotlin.experimental.tryK2=true
