--- a/unicorn-oauth2/unicorn-oauth2-gateway-client/src/main/resources/application.yml
+++ b/unicorn-oauth2/unicorn-oauth2-gateway-client/src/main/resources/application.yml
@@ -68,7 +68,7 @@ spring:
         - id: resource-service
           uri: http://localhost:8090
           predicates:
-            - Path=/res/**
+            - Path=/res/res-mvc/**
           filters:
             - TokenRelay=
             # 下面这俩的顺序是有影响的，要注意
